Fix highlighting in textareas
The previous implementation had a problem: The cursor wouldn’t be visible if inside a highlighted section, because the highlights where layered on top of the actual textarea.

This reverses the order: Now, the textarea is placed on top of the highlighted text. However, everything except for the textarea cursor indicator is invisible (i.e. it has transparent text color).

--- a/app/components/textarea/textarea.css
+++ b/app/components/textarea/textarea.css
@@ -17,6 +17,7 @@
 }
 
 .Textarea-input {
+  position: relative;
   -webkit-appearance: none;
   -moz-appearance: none;
   resize: none;
@@ -37,6 +38,11 @@
   margin-top: var(--spacing-unit-xs);
 }
 
+.Textarea--highlighted .Textarea-input {
+  color: transparent;
+  caret-color: var(--color-text);
+}
+
 .Textarea-highlights {
   pointer-events: none;
   position: absolute;
@@ -44,7 +50,7 @@
   left: 0;
   white-space: pre-wrap;
   border-color: transparent;
-  color: transparent;
+  color: var(--color-text);
 }
 
 .Textarea-placeholder {
